--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,6 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -65,7 +64,8 @@
             android:name=".SignInActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".MapActivity" />
-        <activity android:name=".BikeInfo"></activity>
+        <activity android:name=".BikeInfo" />
+        <activity android:name=".EndContractActivity"></activity>
     </application>
 
 </manifest>
