--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,31 +41,34 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
-        -->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
-
         <activity
             android:name=".HomeActivity"
-            android:screenOrientation="portrait" />
-        <activity android:name=".UnlockActivity" />
+            android:screenOrientation="portrait"
+            android:parentActivityName=".StartActivity"/>
+        <activity
+            android:name=".UnlockActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".HomeActivity"/>
         <activity
             android:name=".RegisterActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:parentActivityName=".StartActivity"/>
         <activity
             android:name=".SignInActivity"
-            android:screenOrientation="portrait" />
-        <activity android:name=".MapActivity" />
-        <activity android:name=".BikeInfo" />
-        <activity android:name=".EndContractActivity"></activity>
+            android:screenOrientation="portrait"
+            android:parentActivityName=".StartActivity"/>
+        <activity
+            android:name=".MapActivity"
+            android:parentActivityName=".HomeActivity"/>
+        <activity
+            android:name=".BikeInfo"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".MapActivity"/>
+        <activity
+            android:name=".EndContractActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".HomeActivity">
+        </activity>
     </application>
 
 </manifest>
